--- a/Web-Project/WebContent/WEB-INF/web.xml
+++ b/Web-Project/WebContent/WEB-INF/web.xml
@@ -4,4 +4,25 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    
+    <error-page>
+		<error-code>404</error-code>
+		<location>/Erorr404.jsp</location>
+	</error-page>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/Erorr500.jsp</location>
+	</error-page>
+
+	<servlet>
+		<servlet-name>HelloCtl</servlet-name>
+		<servlet-class>com.rays.servlet.HelloCtl</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HelloCtl</servlet-name>
+		<url-pattern>/HelloCtl</url-pattern>
+	</servlet-mapping>
+
+    
 </web-app>
